                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.1

  *) ab: Add an optional ramp delay when starting concurrent connections so
     as to not trigger denial of service protection in the network. Report
     levels of concurrency achieved in cases where the test completes before
     full concurrency is achieved. [Graham Leggett]

  *) mod_http2: preserve the port number given in a HTTP/1.1
     request that was Upgraded to HTTP/2. Fixes PR65881.
     [Stefan Eissing]

  *) mod_http2: :scheme pseudo-header values, not matching the
     connection scheme, are forwarded via absolute uris to the
     http protocol processing to preserve semantics of the request.
     Checks on combinations of pseudo-headers values/absence
     have been added as described in RFC 7540.
     Fixes <https://github.com/icing/mod_h2/issues/230>.
     [Stefan Eissing]

  *) core/mpm: add hook 'child_stopped` that gets called when the MPM has
     stopped all processing in a child process. This is when all running
     threads shall be stopped and joined.
     [Stefan Eissing]

  *) core: Make sure and check that LimitXMLRequestBody fits in system memory.
     [Ruediger Pluem, Yann Ylavic]

  *) ab: Fix the detection for when the server performed a legitimate
     connection close as per RFC7230 6.3.1. We must check whedther the
     connection was previously kept alive, and not whether the current
     closed request is keepalive. [Graham Leggett]

  *) mod_rewrite: Make URI-to-filename rewrites work transparently with
     proxy early mappings (mapping=servlet/decoded).  [Yann Ylavic]

  *) mod_md: do not interfere with requests to /.well-known/acme-challenge/
     resources if challenge type 'http-01' is not configured for a domain.
     Fixes <https://github.com/icing/mod_md/issues/279>.
     [Stefan Eissing]

  *) mod_proxy: Bump limit of proxy workers names to 384 characters.  PR 53218
     [Yann Ylavic]
